Fixed issue with SGNS

--- a/report/content.tex
+++ b/report/content.tex
@@ -3,4 +3,11 @@
 \end{abstract}
 
 \section{Introduction}
+\section{Data and Data preparation}
+\section{Words embeding}
+Computers works principlly with numbers, to work with string it require to have a good representations. 
+\subsection{Word2vec}
+\subsection{Improved Word2vec with subsampling and negative sampling}
+\section{Text Classification}
+\section{Results and Discussion}
 \section{Conclusion}
