Re-arrange Structures

--- a/SGNS.ipynb
+++ b/SGNS.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
     "\t\tdata = data.split()\n",
     "\t\tself.word_count = Counter(data)\n",
     "\t\tself.total = sum(list(self.word_count.values()))\n",
-    "\t\tself.vocab_size = len(word_count)\n",
+    "\t\tself.vocab_size = len(self.word_count)\n",
     "\n",
     "\tdef __subsample(self):\n",
     "\t\tt = 1e-5\n",
@@ -117,7 +117,7 @@
     "\t\ti = 0\n",
     "\t\t_new_word_count = {}\n",
     "\t\tfor word in sorted_count:\n",
-    "\t\t\tif np.random.random() < 1 - pdrop[word]:\n",
+    "\t\t\tif np.random.random() < 2:#- pdrop[word]:\n",
     "\t\t\t\tself.id2word[i] = word\n",
     "\t\t\t\tself.word2id[word] = i\n",
     "\t\t\t\t_new_word_count[word] = self.word_count[word]\n",
@@ -165,55 +165,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "class SGNS(nn.Module):\n",
-    "    def __init__(self, vocab_size, emb_dim) -> None:\n",
-    "        super(SGNS, self).__init__()\n",
-    "        self.vocab_size = vocab_size  # N\n",
-    "        self.emb_dim = emb_dim  # H\n",
-    "        self.vEmbedding = nn.Embedding(self.vocab_size, self.emb_dim)\n",
-    "        self.uEmbedding = nn.Embedding(self.vocab_size, self.emb_dim)\n",
-    "\n",
-    "    def forward(self, c, o, neg):\n",
-    "        vv = self.vEmbedding(c)  # BxH\n",
-    "        uu = self.uEmbedding(o)  # BxH\n",
-    "        ng = self.uEmbedding(neg) # BxKxH\n",
-    "        pos = torch.sigmoid(torch.einsum(\"bki,bik->bk\", uu, vv.mT)) # Bx1\n",
-    "        neg = torch.sigmoid(torch.einsum(\"bjkl,blk->bjk\", ng, vv.mT).neg()) #BxKx1\n",
-    "        return pos, neg\n",
-    "\n",
-    "\n",
-    "class SGNSLoss(nn.Module):\n",
-    "    def __init__(self):\n",
-    "        super(SGNSLoss, self).__init__()\n",
-    "\n",
-    "    def forward(self, positive, negatives):\n",
-    "        a = torch.log(positive).neg()\n",
-    "        b = torch.log(negatives).neg().sum(1)\n",
-    "        return torch.mean(a + b)\n",
-    "\n",
-    "\n",
-    "class CorpusData(Dataset):\n",
-    "    def __init__(self, corpus):\n",
-    "        self.pairs = torch.from_numpy(corpus.pairs)\n",
-    "        self.negative = torch.from_numpy(corpus.neg)\n",
-    "        self.V = corpus.vocab_size\n",
-    "\n",
-    "    def __getitem__(self, idx):\n",
-    "        c_positive, o_positive = self.pairs[idx]\n",
-    "        o_negative = self.negative[idx]\n",
-    "        return c_positive, o_positive, o_negative.unsqueeze(1)\n",
-    "\n",
-    "    def __len__(self):\n",
-    "        return len(self.pairs)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,135 +185,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = SGNS(V,H)\n",
+    "model = SGNS(V, H)\n",
     "model = model.to(device)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "criterion = SGNSLoss()\n",
     "optimizer = optim.Adam(model.parameters())\n",
-    "dataloader = DataLoader(corpusdata, batch_size=2*8192, shuffle=True)\n",
+    "dataloader = DataLoader(corpusdata, batch_size=4 * 8192, shuffle=True)\n",
     "N = len(corpusdata)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 1: 100%|██████████| 52/52 [00:06<00:00,  7.49it/s, loss=1.81]\n",
-      "Epoch 2: 100%|██████████| 52/52 [00:06<00:00,  7.84it/s, loss=1.80]\n",
-      "Epoch 3: 100%|██████████| 52/52 [00:06<00:00,  8.16it/s, loss=1.79]\n",
-      "Epoch 4: 100%|██████████| 52/52 [00:06<00:00,  7.81it/s, loss=1.78]\n",
-      "Epoch 5: 100%|██████████| 52/52 [00:06<00:00,  8.12it/s, loss=1.77]\n",
-      "Epoch 6: 100%|██████████| 52/52 [00:06<00:00,  8.10it/s, loss=1.77]\n",
-      "Epoch 7: 100%|██████████| 52/52 [00:06<00:00,  8.06it/s, loss=1.76]\n",
-      "Epoch 8: 100%|██████████| 52/52 [00:06<00:00,  8.05it/s, loss=1.75]\n",
-      "Epoch 9: 100%|██████████| 52/52 [00:06<00:00,  8.04it/s, loss=1.74]\n",
-      "Epoch 10: 100%|██████████| 52/52 [00:06<00:00,  7.92it/s, loss=1.73]\n",
-      "Epoch 11: 100%|██████████| 52/52 [00:06<00:00,  8.09it/s, loss=1.73]\n",
-      "Epoch 12: 100%|██████████| 52/52 [00:06<00:00,  8.06it/s, loss=1.72]\n",
-      "Epoch 13: 100%|██████████| 52/52 [00:06<00:00,  7.99it/s, loss=1.71]\n",
-      "Epoch 14: 100%|██████████| 52/52 [00:06<00:00,  8.06it/s, loss=1.70]\n",
-      "Epoch 15: 100%|██████████| 52/52 [00:06<00:00,  7.99it/s, loss=1.69]\n",
-      "Epoch 16: 100%|██████████| 52/52 [00:06<00:00,  7.95it/s, loss=1.69]\n",
-      "Epoch 17: 100%|██████████| 52/52 [00:06<00:00,  8.01it/s, loss=1.68]\n",
-      "Epoch 18: 100%|██████████| 52/52 [00:06<00:00,  7.96it/s, loss=1.67]\n",
-      "Epoch 19: 100%|██████████| 52/52 [00:06<00:00,  7.89it/s, loss=1.67]\n",
-      "Epoch 20: 100%|██████████| 52/52 [00:06<00:00,  7.89it/s, loss=1.66]\n",
-      "Epoch 21: 100%|██████████| 52/52 [00:06<00:00,  7.89it/s, loss=1.65]\n",
-      "Epoch 22: 100%|██████████| 52/52 [00:06<00:00,  7.88it/s, loss=1.65]\n",
-      "Epoch 23: 100%|██████████| 52/52 [00:06<00:00,  7.89it/s, loss=1.64]\n",
-      "Epoch 24: 100%|██████████| 52/52 [00:06<00:00,  7.93it/s, loss=1.63]\n",
-      "Epoch 25: 100%|██████████| 52/52 [00:06<00:00,  7.95it/s, loss=1.63]\n",
-      "Epoch 26: 100%|██████████| 52/52 [00:06<00:00,  7.87it/s, loss=1.62]\n",
-      "Epoch 27: 100%|██████████| 52/52 [00:06<00:00,  7.95it/s, loss=1.61]\n",
-      "Epoch 28: 100%|██████████| 52/52 [00:06<00:00,  7.90it/s, loss=1.61]\n",
-      "Epoch 29: 100%|██████████| 52/52 [00:06<00:00,  7.87it/s, loss=1.60]\n",
-      "Epoch 30: 100%|██████████| 52/52 [00:06<00:00,  7.94it/s, loss=1.59]\n",
-      "Epoch 31: 100%|██████████| 52/52 [00:06<00:00,  7.89it/s, loss=1.59]\n",
-      "Epoch 32: 100%|██████████| 52/52 [00:06<00:00,  7.90it/s, loss=1.58]\n",
-      "Epoch 33: 100%|██████████| 52/52 [00:06<00:00,  7.84it/s, loss=1.58]\n",
-      "Epoch 34: 100%|██████████| 52/52 [00:06<00:00,  7.85it/s, loss=1.57]\n",
-      "Epoch 35: 100%|██████████| 52/52 [00:06<00:00,  7.93it/s, loss=1.56]\n",
-      "Epoch 36: 100%|██████████| 52/52 [00:06<00:00,  7.71it/s, loss=1.56]\n",
-      "Epoch 37: 100%|██████████| 52/52 [00:07<00:00,  7.34it/s, loss=1.55]\n",
-      "Epoch 38: 100%|██████████| 52/52 [00:07<00:00,  6.91it/s, loss=1.55]\n",
-      "Epoch 39: 100%|██████████| 52/52 [00:07<00:00,  7.36it/s, loss=1.54]\n",
-      "Epoch 40: 100%|██████████| 52/52 [00:07<00:00,  7.42it/s, loss=1.54]\n",
-      "Epoch 41: 100%|██████████| 52/52 [00:06<00:00,  7.50it/s, loss=1.53]\n",
-      "Epoch 42: 100%|██████████| 52/52 [00:06<00:00,  7.58it/s, loss=1.52]\n",
-      "Epoch 43: 100%|██████████| 52/52 [00:06<00:00,  7.50it/s, loss=1.52]\n",
-      "Epoch 44: 100%|██████████| 52/52 [00:07<00:00,  7.15it/s, loss=1.51]\n",
-      "Epoch 45: 100%|██████████| 52/52 [00:06<00:00,  7.59it/s, loss=1.51]\n",
-      "Epoch 46: 100%|██████████| 52/52 [00:07<00:00,  7.03it/s, loss=1.50]\n",
-      "Epoch 47: 100%|██████████| 52/52 [00:06<00:00,  7.47it/s, loss=1.50]\n",
-      "Epoch 48: 100%|██████████| 52/52 [00:06<00:00,  7.60it/s, loss=1.49]\n",
-      "Epoch 49: 100%|██████████| 52/52 [00:06<00:00,  7.61it/s, loss=1.49]\n",
-      "Epoch 50: 100%|██████████| 52/52 [00:06<00:00,  7.57it/s, loss=1.48]\n",
-      "Epoch 51: 100%|██████████| 52/52 [00:07<00:00,  7.20it/s, loss=1.48]\n",
-      "Epoch 52: 100%|██████████| 52/52 [00:06<00:00,  7.54it/s, loss=1.47]\n",
-      "Epoch 53: 100%|██████████| 52/52 [00:07<00:00,  7.39it/s, loss=1.47]\n",
-      "Epoch 54: 100%|██████████| 52/52 [00:07<00:00,  7.27it/s, loss=1.46]\n",
-      "Epoch 55: 100%|██████████| 52/52 [00:06<00:00,  7.44it/s, loss=1.46]\n",
-      "Epoch 56: 100%|██████████| 52/52 [00:07<00:00,  7.06it/s, loss=1.46]\n",
-      "Epoch 57: 100%|██████████| 52/52 [00:06<00:00,  7.52it/s, loss=1.45]\n",
-      "Epoch 58: 100%|██████████| 52/52 [00:07<00:00,  7.37it/s, loss=1.45]\n",
-      "Epoch 59: 100%|██████████| 52/52 [00:07<00:00,  7.41it/s, loss=1.44]\n",
-      "Epoch 60: 100%|██████████| 52/52 [00:07<00:00,  7.24it/s, loss=1.44]\n",
-      "Epoch 61: 100%|██████████| 52/52 [00:06<00:00,  7.48it/s, loss=1.43]\n",
-      "Epoch 62: 100%|██████████| 52/52 [00:07<00:00,  7.15it/s, loss=1.43]\n",
-      "Epoch 63: 100%|██████████| 52/52 [00:07<00:00,  7.35it/s, loss=1.42]\n",
-      "Epoch 64: 100%|██████████| 52/52 [00:06<00:00,  7.66it/s, loss=1.42]\n",
-      "Epoch 65: 100%|██████████| 52/52 [00:07<00:00,  7.37it/s, loss=1.42]\n",
-      "Epoch 66: 100%|██████████| 52/52 [00:06<00:00,  7.65it/s, loss=1.41]\n",
-      "Epoch 67: 100%|██████████| 52/52 [00:06<00:00,  7.53it/s, loss=1.41]\n",
-      "Epoch 68: 100%|██████████| 52/52 [00:06<00:00,  7.57it/s, loss=1.40]\n",
-      "Epoch 69: 100%|██████████| 52/52 [00:06<00:00,  7.54it/s, loss=1.40]\n",
-      "Epoch 70: 100%|██████████| 52/52 [00:06<00:00,  7.67it/s, loss=1.40]\n",
-      "Epoch 71: 100%|██████████| 52/52 [00:06<00:00,  7.68it/s, loss=1.39]\n",
-      "Epoch 72: 100%|██████████| 52/52 [00:06<00:00,  7.81it/s, loss=1.39]\n",
-      "Epoch 73: 100%|██████████| 52/52 [00:06<00:00,  7.55it/s, loss=1.38]\n",
-      "Epoch 74: 100%|██████████| 52/52 [00:06<00:00,  7.49it/s, loss=1.38]\n",
-      "Epoch 75: 100%|██████████| 52/52 [00:06<00:00,  7.53it/s, loss=1.38]\n",
-      "Epoch 76: 100%|██████████| 52/52 [00:06<00:00,  7.85it/s, loss=1.37]\n",
-      "Epoch 77: 100%|██████████| 52/52 [00:06<00:00,  7.80it/s, loss=1.37]\n",
-      "Epoch 78: 100%|██████████| 52/52 [00:06<00:00,  7.80it/s, loss=1.37]\n",
-      "Epoch 79: 100%|██████████| 52/52 [00:06<00:00,  7.75it/s, loss=1.36]\n",
-      "Epoch 80: 100%|██████████| 52/52 [00:06<00:00,  8.09it/s, loss=1.36]\n",
-      "Epoch 81: 100%|██████████| 52/52 [00:06<00:00,  8.18it/s, loss=1.35]\n",
-      "Epoch 82: 100%|██████████| 52/52 [00:06<00:00,  8.26it/s, loss=1.35]\n",
-      "Epoch 83: 100%|██████████| 52/52 [00:06<00:00,  8.23it/s, loss=1.35]\n",
-      "Epoch 84: 100%|██████████| 52/52 [00:06<00:00,  8.08it/s, loss=1.34]\n",
-      "Epoch 85: 100%|██████████| 52/52 [00:06<00:00,  8.02it/s, loss=1.34]\n",
-      "Epoch 86: 100%|██████████| 52/52 [00:06<00:00,  8.00it/s, loss=1.34]\n",
-      "Epoch 87: 100%|██████████| 52/52 [00:06<00:00,  8.09it/s, loss=1.33]\n",
-      "Epoch 88: 100%|██████████| 52/52 [00:06<00:00,  8.10it/s, loss=1.33]\n",
-      "Epoch 89: 100%|██████████| 52/52 [00:06<00:00,  8.08it/s, loss=1.33]\n",
-      "Epoch 90: 100%|██████████| 52/52 [00:06<00:00,  8.26it/s, loss=1.32]\n",
-      "Epoch 91: 100%|██████████| 52/52 [00:06<00:00,  8.27it/s, loss=1.32]\n",
-      "Epoch 92: 100%|██████████| 52/52 [00:06<00:00,  8.36it/s, loss=1.32]\n",
-      "Epoch 93: 100%|██████████| 52/52 [00:06<00:00,  8.32it/s, loss=1.31]\n",
-      "Epoch 94: 100%|██████████| 52/52 [00:06<00:00,  8.30it/s, loss=1.31]\n",
-      "Epoch 95: 100%|██████████| 52/52 [00:06<00:00,  8.24it/s, loss=1.31]\n",
-      "Epoch 96: 100%|██████████| 52/52 [00:06<00:00,  8.28it/s, loss=1.30]\n",
-      "Epoch 97: 100%|██████████| 52/52 [00:06<00:00,  8.30it/s, loss=1.30]\n",
-      "Epoch 98: 100%|██████████| 52/52 [00:06<00:00,  8.19it/s, loss=1.30]\n",
-      "Epoch 99: 100%|██████████| 52/52 [00:06<00:00,  7.88it/s, loss=1.30]\n",
-      "Epoch 100: 100%|██████████| 52/52 [00:06<00:00,  8.11it/s, loss=1.29]\n"
+      "Epoch 1:   0%|          | 0/148 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1: 100%|██████████| 148/148 [00:58<00:00,  2.53it/s, loss=30.21]\n",
+      "Epoch 2: 100%|██████████| 148/148 [00:57<00:00,  2.56it/s, loss=26.76]\n",
+      "Epoch 3: 100%|██████████| 148/148 [00:59<00:00,  2.51it/s, loss=23.70]\n",
+      "Epoch 4:   5%|▌         | 8/148 [00:03<01:02,  2.24it/s, loss=1.20]\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[27], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m model\u001b[38;5;241m.\u001b[39mtrain()\n\u001b[1;32m      5\u001b[0m pbar \u001b[38;5;241m=\u001b[39m tqdm(dataloader, total\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mlen\u001b[39m(dataloader), desc\u001b[38;5;241m=\u001b[39m\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEpoch \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mi\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m----> 6\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m c, o, n \u001b[38;5;129;01min\u001b[39;00m pbar:\n\u001b[1;32m      7\u001b[0m \tc, o, n \u001b[38;5;241m=\u001b[39m c\u001b[38;5;241m.\u001b[39mto(device), o\u001b[38;5;241m.\u001b[39mto(device), n\u001b[38;5;241m.\u001b[39mto(device)\n\u001b[1;32m      8\u001b[0m \tpos, neg \u001b[38;5;241m=\u001b[39m model(c, o, n)\n",
+      "File \u001b[0;32m~/.pyenv/versions/3.10.14/envs/torch/lib/python3.10/site-packages/tqdm/std.py:1181\u001b[0m, in \u001b[0;36mtqdm.__iter__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1178\u001b[0m time \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_time\n\u001b[1;32m   1180\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m-> 1181\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m obj \u001b[38;5;129;01min\u001b[39;00m iterable:\n\u001b[1;32m   1182\u001b[0m         \u001b[38;5;28;01myield\u001b[39;00m obj\n\u001b[1;32m   1183\u001b[0m         \u001b[38;5;66;03m# Update and possibly print the progressbar.\u001b[39;00m\n\u001b[1;32m   1184\u001b[0m         \u001b[38;5;66;03m# Note: does not call self.update(1) for speed optimisation.\u001b[39;00m\n",
+      "File \u001b[0;32m~/.pyenv/versions/3.10.14/envs/torch/lib/python3.10/site-packages/torch/utils/data/dataloader.py:631\u001b[0m, in \u001b[0;36m_BaseDataLoaderIter.__next__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    628\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_sampler_iter \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    629\u001b[0m     \u001b[38;5;66;03m# TODO(https://github.com/pytorch/pytorch/issues/76750)\u001b[39;00m\n\u001b[1;32m    630\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_reset()  \u001b[38;5;66;03m# type: ignore[call-arg]\u001b[39;00m\n\u001b[0;32m--> 631\u001b[0m data \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_next_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    632\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_num_yielded \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m    633\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_dataset_kind \u001b[38;5;241m==\u001b[39m _DatasetKind\u001b[38;5;241m.\u001b[39mIterable \u001b[38;5;129;01mand\u001b[39;00m \\\n\u001b[1;32m    634\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_IterableDataset_len_called \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m \\\n\u001b[1;32m    635\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_num_yielded \u001b[38;5;241m>\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_IterableDataset_len_called:\n",
+      "File \u001b[0;32m~/.pyenv/versions/3.10.14/envs/torch/lib/python3.10/site-packages/torch/utils/data/dataloader.py:675\u001b[0m, in \u001b[0;36m_SingleProcessDataLoaderIter._next_data\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    673\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_next_data\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[1;32m    674\u001b[0m     index \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_next_index()  \u001b[38;5;66;03m# may raise StopIteration\u001b[39;00m\n\u001b[0;32m--> 675\u001b[0m     data \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_dataset_fetcher\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfetch\u001b[49m\u001b[43m(\u001b[49m\u001b[43mindex\u001b[49m\u001b[43m)\u001b[49m  \u001b[38;5;66;03m# may raise StopIteration\u001b[39;00m\n\u001b[1;32m    676\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_pin_memory:\n\u001b[1;32m    677\u001b[0m         data \u001b[38;5;241m=\u001b[39m _utils\u001b[38;5;241m.\u001b[39mpin_memory\u001b[38;5;241m.\u001b[39mpin_memory(data, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_pin_memory_device)\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -366,23 +250,21 @@
     "\tpbar = tqdm(dataloader, total=len(dataloader), desc=f\"Epoch {i+1}\")\n",
     "\tfor c, o, n in pbar:\n",
     "\t\tc, o, n = c.to(device), o.to(device), n.to(device)\n",
-    "\t\tpos, neg = model(c,o,n)\n",
+    "\t\tpos, neg = model(c, o, n)\n",
     "\t\toptimizer.zero_grad()\n",
     "\t\tloss = criterion(pos, neg)\n",
     "\t\tloss.backward()\n",
     "\t\toptimizer.step()\n",
     "\t\ttotal_loss += loss.item() * c.size(0)\n",
-    "\t\t# break\n",
     "\t\tpbar.set_postfix(loss=f\"{total_loss/N:.2f}\")\n",
     "\n",
     "\tavg_loss = total_loss / N\n",
-    "\tlog.append(avg_loss)\n",
-    "\t# break\n"
+    "\tlog.append(avg_loss)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -402,11 +284,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "from torch.utils.tensorboard.writer import SummaryWriter\n",
     "\n",
     "from datetime import datetime"
@@ -414,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +340,9 @@
     "\twriter.flush()\n",
     "\twriter.close()\n",
     "\treturn log_dir\n",
-    "log_embeddings(model, corpus)"
+    "\n",
+    "\n",
+    "# log_embeddings(model, corpus)"
    ]
   },
   {
