--- a/report/main.tex
+++ b/report/main.tex
@@ -67,6 +67,12 @@
 \usepackage{amssymb}
 \usepackage{tabularx}
 
+\usepackage{tikz}
+\usetikzlibrary{positioning, shapes, arrows.meta}
+\NewDocumentCommand{\mbf}{m}{\mathbf{#1}}
+\newcommand{\RR}{\mathbb{R}}
+\newcommand{\softmax}{\mathrm{softmax}}
+
 % Some very useful LaTeX packages include:
 % (uncomment the ones you want to load)
 
@@ -509,17 +515,7 @@ Stellenbosch University\\
 % <OR> manually copy in the resultant .bbl file
 % set second argument of \begin to the number of references
 % (used to reserve space for the reference number labels box)
-\begin{thebibliography}{1}
 
-\bibitem{kamper2022nlp817}
-Herman Kamper. \emph{NLP817}. \href{https://www.kamperh.com/nlp817/}{https://www.kamperh.com/nlp817/}, 2022--2024.
-
-\bibitem{jurafsky2022speech}
-Daniel Jurafsky and James H. Martin. \emph{Speech and Language Processing}. 3rd edition, Stanford University and University of Colorado at Boulder, 2024.
-
-\bibitem{elinguisticsnet2023compare}
-\emph{Compare languages - online genetic proximity calculator}. \href{http://www.elinguistics.net/Compare\_Languages.aspx}{http://www.elinguistics.net/Compare\_Languages.aspx}, 2023.
-\end{thebibliography}
 
 
 
